ingress/ingress-hosts.yaml
#делает тоже самое что написано в командах в readme
#можно использовать без своего днс, а прописать его в /etc/hosts локально. там используются адреса из вывода kubectl describe ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: www.adv-it.net
    http:
      paths:
        - backend:
           serviceName: main
           servicePort: 80

  - host: web1.adv-it.net
    http:
      paths:
        - backend:
           serviceName: web1
           servicePort: 80

  - host: web2.adv-it.net
    http:
      paths:
        - backend:
           serviceName: web2
           servicePort: 80

  - host: cat.adv-it.net
    http:
      paths:
        - backend:
           serviceName: tomcat
           servicePort: 8080
